# controllers/category_admin.go
@@ -43,6 +43,19 @@ func (c *CategoryAdminController) GetAll(limit, page int) (response JSONResponse
 	return
 }
 
+// @Title Get Category
+// @Summary Get Category
+// @Description Get category
+// @Success 200
+// @Failure 403
+// @Param categoryID path int true "id of the category to update"
+// @router /:categoryID [get]
+func (c *CategoryAdminController) GetCategory(categoryID uint) (response JSONResponse) {
+	category, err := c.categoryUcase.GetByID(categoryID)
+	response.ReturnJSONResponse(category, err)
+	return
+}
+
 // @Title Create Category
 // @Summary Create Category
 // @Description create category
@@ -51,8 +64,36 @@ func (c *CategoryAdminController) GetAll(limit, page int) (response JSONResponse
 // @Param params body models.Category true "body of this request"
 // @router / [post]
 func (c *CategoryAdminController) CreateCategory(params *models.Category) (response JSONResponse) {
-	// TODO: validate params
 	err := c.categoryUcase.Create(params)
 	response.ReturnJSONResponse(params, err)
+	return
+}
+
+// @Title Update Category
+// @Summary Update Category
+// @Description update category
+// @Success 200
+// @Failure 403
+// @Param categoryID path int true "id of the category to update"
+// @Param params body models.Category true "body of this request"
+// @router /:categoryID [put]
+func (c *CategoryAdminController) UpdateCategory(categoryID uint, params *models.Category) (response JSONResponse) {
+	// TODO: validate params
+	params.ID = categoryID
+	err := c.categoryUcase.Update(params)
+	response.ReturnJSONResponse(params, err)
+	return
+}
+
+// @Title Delete Category
+// @Summary Delete Category
+// @Description delete category
+// @Success 200
+// @Failure 403
+// @Param categoryID path int true "id of the category to update"
+// @router /:categoryID [delete]
+func (c *CategoryAdminController) DeleteCategory(categoryID uint) (response JSONResponse) {
+	err := c.categoryUcase.Delete(&models.Category{ID: categoryID})
+	response.ReturnJSONResponse(nil, err)
 	return
 }
